latest changes to payment api
